Fixed table width issue

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   });
 </script>
 <div class="p-4 flex items-center justify-center space-x-4" hx-ext="client-side-templates">
-  <div class="relative w-64">
+  <div class="relative w-full">
     <input
       type="text"
       name="query"
